manifests/examples/polis-math-digifinland-deployment-gke-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polis-math
spec:
  # set replicas=1, since math worker is not designed to scale horizontally yet.
  replicas: 1
  selector:
    matchLabels:
      app: polis-math
  template:
    metadata:
      labels:
        app: polis-math
    spec:
      containers:
        - image: europe-north1-docker.pkg.dev/polis-kokeilu/polis-kokeilu-test/polis-math:test
          imagePullPolicy: Always
          name: polis-math
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polis-math-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: polis-math
