manifests/examples/polis-server-digifinland-deployment-gke-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polis-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: polis-server
  template:
    metadata:
      labels:
        app: polis-server
    spec:
      containers:
        - image: europe-north1-docker.pkg.dev/polis-kokeilu/polis-kokeilu-test/polis-server:test
          imagePullPolicy: Always
          name: polis-server
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              # /home gets proxied to polis-file-server - use api paths for checking polis-server health
              # path: /home
              path: /api/v3/testConnection 
              port: 5000            
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polis-server-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "polis-server-cloudarmor"}'
spec:
  type: NodePort
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: polis-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polis-server-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: polis-kokeilu-test-lb-global-static-ip
    networking.gke.io/managed-certificates: polis-test-managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https
spec:
  defaultBackend:
    service:
      name: polis-server-service
      port:
        number: 5000
  rules:
  - host: polis-test-gke.digifinland.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: polis-server-service
            port:
              number: 5000
